--- a/jquery_demos.html
+++ b/jquery_demos.html
@@ -7,83 +7,82 @@
 <script>
 $(document).ready(function(){
     //Beginning of Animation Section
-    $("#top-right-title").click(function(){
-        if ($("#top-right").height() == 85){
-            $("#top-right").animate({height: '98%', width: '98%'}, function(){$("#top-right-content").show()});
-            $("#top-right-content").addClass("top-right-large");
-            $("#top-right-title").css({"font-size": "2em", "padding-right": "10px"});
+    $("#top-right,#top-left,#bottom-left,#bottom-right").click(function(){
+      var thisId = $(this).attr('id');
+        if ($("#"+thisId+"-container").height() == 85){
+            $("#"+thisId+"-container").animate({height: '98%', width: '98%'}, function(){$("#"+thisId+"-content").show()});
+            $("#"+thisId+"-content").addClass(thisId+"-large");
+            $("#"+thisId).css({"font-size": "2em"});
         } else {
-            $("#top-right").animate({height: '85px', width: '250px'});
-            $("#top-right-content").removeClass("top-right-large").hide();
-            $("#top-right-title").css({"font-size": "1em", "padding-right": "5px", "padding-top": "0px"}).removeClass("top-titles");
+            $("#"+thisId+"-container").animate({height: '85px', width: '250px'});
+            $("#"+thisId+"-content").removeClass(thisId+"-large").hide();
+            $("#"+thisId).css({"font-size": "1em"})
         }
-    });//Animation code for top right box
+    });//End of Animation Section
+    //Equipment Tab Section
+    $(".tabs-menu a").click(function(event) {
+        event.preventDefault();
+        $(this).parent().addClass("active-tab");
+        $(this).parent().siblings().removeClass("active-tab");
+        var thisTab = $(this).attr("href");
+        $(".tab-content").not(thisTab).css("display", "none");
+        $(thisTab).fadeIn();
+    });//End of Equipment Tab Section
+    //FAQ Accordian Section
+    $(".accordion-title").click(function(){
+        //$(this).siblings('.accordion-content').slideUp(300);
+        //$(this).next('.accordion-content').slideDown(300);
+        $(this).next('.accordion-content').slideToggle(300); //Slightly easier way to do this that also allows multiple accordions to be open at once
+    });//End of FAQ Accordion Section
+    //Title Black menu Section
+    $('.myMenu > li').bind('mouseover', openSubMenu);
+		$('.myMenu > li').bind('mouseout', closeSubMenu);
 
-    $("#top-left-title").click(function(){
-        if ($("#top-left").height() == 85){
-            $("#top-left").animate({height: '98%', width: '98%'}, function(){$("#top-left-content").show()});
-            $("#top-left-title").css({"font-size": "2em", "padding-left": "10px"}).addClass("top-titles");
-            $("#top-left-content").addClass("top-left-large");
-        } else {
-            $("#top-left").animate({height: '85px', width: '250px'});
-            $("#top-left-content").removeClass("top-left-large").hide();
-            $("#top-left-title").css({"font-size": "1em", "padding-left": "5px", "padding-top": "0px"}).removeClass("top-titles");
-        }
-    });//Animation code for top left box
+		function openSubMenu() {
+			$(this).find('ul').css('visibility', 'visible');
+		};
 
-      $("#bottom-left-title").click(function(){
-        if ($("#bottom-left").height() == 85){
-            $("#bottom-left").animate({height: '98%', width: '98%'}, function(){$("#bottom-left-content").show()});
-            $("#bottom-left-title").css({"font-size": "2em", "padding-right": "10px"}).addClass("bottom-titles");
-            $("#bottom-left-content").addClass("bottom-left-large");
-        } else {
-            $("#bottom-left").animate({height: '85px', width: '250px'});
-            $("#bottom-left-content").removeClass("bottom-left-large").hide();
-            $("#bottom-left-title").css({"font-size": "1em", "padding-left": "5px", "padding-bottom": "0px"}).removeClass("bottom-titles");
-        }
-    });//Animation code for bottom left box
-
-      $("#bottom-right-title").click(function(){
-        if ($("#bottom-right").height() == 85){
-            $("#bottom-right").animate({height: '98%', width: '98%'}, function(){$("#bottom-right-content").show()});
-            $("#bottom-right-title").css({"font-size": "2em", "padding-right": "10px"}).addClass("bottom-titles");
-            $("#bottom-right-content").addClass("bottom-right-large");
-        } else {
-            $("#bottom-right").animate({height: '85px', width: '250px'});
-            $("#bottom-right-content").removeClass("bottom-right-large").hide();
-            $("#bottom-right-title").css({"font-size": "1em", "padding-right": "5px", "padding-top": "0px"}).removeClass("bottom-titles");
-        }
-    });//Animation code for bottom right box
-    //End of Animation Section
-
+		function closeSubMenu() {
+			$(this).find('ul').css('visibility', 'hidden');
+		};//End of menu section
 });
 </script>
 </head>
 <body id="main-page">
     <div class="outer-box">
-        <div class="inner-box" id="top-left">
-            <div id="top-left-title">
+        <div class="inner-box" id="top-left-container">
+            <div id="top-left">
                 <h1>Equipment</h1>
             </div>
             <div id="top-left-content">
-            <h1> Some Content</h1>
-            <p>On projection apartments unsatiable so if he entreaties appearance. Rose you wife how set lady half wish. Hard sing an in true felt. Welcomed stronger if steepest ecstatic an suitable finished of oh. Entered at excited at forming between so produce. Chicken unknown besides attacks gay compact out you. Continuing no simplicity no favourable on reasonably melancholy estimating. Own hence views two ask right whole ten seems. What near kept met call old west dine. Our announcing sufficient why pianoforte.</p>
+              <ul class="tabs-menu">
+                  <li class="active-tab"><a href="#tab1">Drums</a></li>
+                  <li><a href="#tab2">Cymbals</a></li>
+                  <li><a href="#tab3">Hardware</a></li>
+                  <li><a href="#tab4">Accessories</a></li>
+              </ul>
+              <div class="tab">
+                <div class="tab-content" id="tab1">
+                    test tab 1
+                </div>
+                <div class="tab-content" id="tab2">
+                    test tab 2
+                </div>
+                <div class="tab-content" id="tab3">
+                    test tab 3
+                </div>
+                <div class="tab-content" id="tab4">
+                    test tab 4
+                </div>
+              </div>
 
-<p>An country demesne message it. Bachelor domestic extended doubtful as concerns at. Morning prudent removal an letters by. On could my in order never it. Or excited certain sixteen it to parties colonel. Depending conveying direction has led immediate. Law gate her well bed life feet seen rent. On nature or no except it sussex.</p>
 
-<p>Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye your as fail lady. Up greatest am exertion or marianne. Shy occasional terminated insensible and inhabiting gay. So know do fond to half on. Now who promise was justice new winding. In finished on he speaking suitable advanced if. Boy happiness sportsmen say prevailed offending concealed nor was provision. Provided so as doubtful on striking required. Waiting we to compass assured. </p>
-
-<p>Two before narrow not relied how except moment myself. Dejection assurance mrs led certainly. So gate at no only none open. Betrayed at properly it of graceful on. Dinner abroad am depart ye turned hearts as me wished. Therefore allowance too perfectly gentleman supposing man his now. Families goodness all eat out bed steepest servants. Explained the incommode sir improving northward immediate eat. Man denoting received you sex possible you. Shew park own loud son door less yet.</p>
-
-<p>Allow miles wound place the leave had. To sitting subject no improve studied limited. Ye indulgence unreserved connection alteration appearance my an astonished. Up as seen sent make he they of. Her raising and himself pasture believe females. Fancy she stuff after aware merit small his. Charmed esteems luckily age out.</p>
-
-<p>So by colonel hearted ferrars. Draw from upon here gone add one. He in sportsman household otherwise it perceived instantly. Is inquiry no he several excited am. Called though excuse length ye needed it he having. Whatever throwing we on resolved entrance together graceful. Mrs assured add private married removed believe did she. </p>
-            </div>
+</div>
         </div>
     </div>
     <div class="outer-box">
-        <div class="inner-box" id="top-right">
-            <div id="top-right-title">
+        <div class="inner-box" id="top-right-container">
+            <div id="top-right">
                 <h1>Drummers</h1>
             </div>
         <div id="top-right-content">
@@ -113,9 +112,9 @@ $(document).ready(function(){
         </div>
     </div>
     <div class="outer-box">
-        <div class="inner-box" id="bottom-left">
-            <div id="bottom-left-title">
-                <h1>Learning to Play</h1>
+        <div class="inner-box" id="bottom-left-container">
+            <div id="bottom-left">
+                <h1>Quiz</h1>
             </div>
         <div id="bottom-left-content">
         <h1> Some Content</h1>
@@ -133,28 +132,54 @@ $(document).ready(function(){
         </div>
     </div>
     <div class="outer-box">
-        <div class="inner-box" id="bottom-right">
-            <div id="bottom-right-title">
+        <div class="inner-box" id="bottom-right-container">
+            <div id="bottom-right">
                 <h1>FAQ</h1>
             </div>
         <div id="bottom-right-content">
-        <h1> Some Content</h1>
-            <p>On projection apartments unsatiable so if he entreaties appearance. Rose you wife how set lady half wish. Hard sing an in true felt. Welcomed stronger if steepest ecstatic an suitable finished of oh. Entered at excited at forming between so produce. Chicken unknown besides attacks gay compact out you. Continuing no simplicity no favourable on reasonably melancholy estimating. Own hence views two ask right whole ten seems. What near kept met call old west dine. Our announcing sufficient why pianoforte.</p>
-
-<p>An country demesne message it. Bachelor domestic extended doubtful as concerns at. Morning prudent removal an letters by. On could my in order never it. Or excited certain sixteen it to parties colonel. Depending conveying direction has led immediate. Law gate her well bed life feet seen rent. On nature or no except it sussex.</p>
-
-<p>Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye your as fail lady. Up greatest am exertion or marianne. Shy occasional terminated insensible and inhabiting gay. So know do fond to half on. Now who promise was justice new winding. In finished on he speaking suitable advanced if. Boy happiness sportsmen say prevailed offending concealed nor was provision. Provided so as doubtful on striking required. Waiting we to compass assured. </p>
-
-<p>Two before narrow not relied how except moment myself. Dejection assurance mrs led certainly. So gate at no only none open. Betrayed at properly it of graceful on. Dinner abroad am depart ye turned hearts as me wished. Therefore allowance too perfectly gentleman supposing man his now. Families goodness all eat out bed steepest servants. Explained the incommode sir improving northward immediate eat. Man denoting received you sex possible you. Shew park own loud son door less yet.</p>
-
-<p>Allow miles wound place the leave had. To sitting subject no improve studied limited. Ye indulgence unreserved connection alteration appearance my an astonished. Up as seen sent make he they of. Her raising and himself pasture believe females. Fancy she stuff after aware merit small his. Charmed esteems luckily age out.</p>
-
-<p>So by colonel hearted ferrars. Draw from upon here gone add one. He in sportsman household otherwise it perceived instantly. Is inquiry no he several excited am. Called though excuse length ye needed it he having. Whatever throwing we on resolved entrance together graceful. Mrs assured add private married removed believe did she. </p></div>
-        </div>
+          <div class="accordion">
+              <div class="accordion-title">
+                <h1>FAQ 1</h1>
+              </div>
+              <div class="accordion-content">
+                <p>Some content</p>
+                <p>Some content</p>
+              </div>
+              <div class="accordion-title">
+                <h1>FAQ 2</h1>
+              </div>
+              <div class="accordion-content">
+                <p>Some content</p>
+                <p>Some content</p>
+              </div>
+              <div class="accordion-title">
+                <h1>FAQ 3</h1>
+              </div>
+              <div class="accordion-content">
+                <p>Some content</p>
+                <p>Some content</p>
+                <p>Some content</p>
+                <p>Some content</p>
+                <p>Some content</p>
+                <p>Some content</p>
+              </div>
+          </div>
+            </div>
     </div>
     <div class="title-block">
         <h1>COM554 Drum JQuery Site</h1>
         <h1>B00694919 - Ryan Browne</h1>
+
+        <ul class="myMenu">
+  	<li><a href="#">Menu</a>
+      <ul>
+          <li><a href="#">Edit Preferences</a></li>
+            <li><a href="#">Toggle Tooltips</a></li>
+        </ul></li>
+      <li><a href="#">Report</a></li>
+      <li><a href="#">Screencast</a>
+        </li>
+  </ul>
     </div>
 </body>
 </html>
